Actualizado con Colecciones

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -3,6 +3,6 @@ import MainLayout from "../layouts/MainLayout.astro";
 ---
 
 <MainLayout title="Page Not Found">
-    <h1>Are you lost?</h1>
-    <a href="/">Go back Home</a>
+    <h1 class="text-xl text-white">Are you lost?</h1>
+    <a href="/" class="text-xl text-white">Go back Home</a>
 </MainLayout>
