--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,9 +1,10 @@
 ---
-import Header from "./Header.astro"
-import Footer from "./Footer.astro"
+import '/src/styles/global.css'
+import Header from "../components/Header.astro"
+import Footer from "../components/Footer.astro"
 
 interface Props {
-    title: string;
+    title?: string;
 }
 const {title} = Astro.props;
 ---
@@ -15,9 +16,11 @@ const {title} = Astro.props;
         <meta name="generator" content={Astro.generator} />
         <title>{title}</title>
     </head>
-    <body>
+    <body class="bg-gray-800">
         <Header></Header>
-        <slot/>
+        <main class="mb-10 max-w-5xl m-auto px-2 py-2">
+            <slot/>
+        </main>
         <Footer></Footer>
     </body>
 </html>
